--- a/Project.ipynb
+++ b/Project.ipynb
@@ -27,6 +27,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -45,7 +60,9 @@
    "source": [
     "## 0. Background\n",
     "\n",
-    "Motivation -- may merge w/ 1."
+    "Motivation -- may merge w/ 1.\n",
+    "\n",
+    "Relating to previous studies. Seeing how this measures up compared to other measures."
    ]
   },
   {
@@ -54,7 +71,15 @@
    "source": [
     "## 1. Implementation and Interpretation of Blinder-Oaxaca\n",
     "\n",
-    "Implement Blinder-Oaxaca using statsmodels"
+    "`oaxaca` is ssc-able.\n",
+    "\n",
+    "porting into python. building on top of `statsmodels`.\n",
+    "\n",
+    "what the math behind it is.\n",
+    "\n",
+    "what we hope to do with that.\n",
+    "\n",
+    "how it measures pay gap."
    ]
   },
   {
@@ -63,7 +88,208 @@
    "source": [
     "## 2. Data\n",
     "\n",
-    "Some data set"
+    "Where the data set is from.\n",
+    "\n",
+    "How we plan to use it.\n",
+    "\n",
+    "Any standardization and cleaning you did.\n",
+    "\n",
+    "Any caveats.\n",
+    "\n",
+    "Summary tables and statistics."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(5300079, 9)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>COUNTRY</th>\n",
+       "      <th>PERWT</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>SEX</th>\n",
+       "      <th>MARST</th>\n",
+       "      <th>NATIVITY</th>\n",
+       "      <th>EDATTAIN</th>\n",
+       "      <th>EMPSTAT</th>\n",
+       "      <th>INCTOT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>18.54</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>20.23</td>\n",
+       "      <td>54</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>700.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>20.23</td>\n",
+       "      <td>44</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>419.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>20.23</td>\n",
+       "      <td>22</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>510.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>20.23</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>650.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  COUNTRY  PERWT  AGE  SEX  MARST  NATIVITY  EDATTAIN  EMPSTAT  INCTOT\n",
+       "0  Brazil  18.54   22    1      2         1         2        1  1000.0\n",
+       "1  Brazil  20.23   54    1      2         1         1        1   700.0\n",
+       "2  Brazil  20.23   44    2      2         1         1        1   419.0\n",
+       "3  Brazil  20.23   22    2      1         1         1        3   510.0\n",
+       "4  Brazil  20.23   26    2      1         1         3        1   650.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('Brazil.csv')\n",
+    "print(data.shape)\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>COUNTRY</th>\n",
+       "      <th>PERWT</th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>MARST</th>\n",
+       "      <th>NATIVITY</th>\n",
+       "      <th>EDATTAIN</th>\n",
+       "      <th>EMPSTAT</th>\n",
+       "      <th>INCTOT</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SEX</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2770543</td>\n",
+       "      <td>2770543</td>\n",
+       "      <td>2770543</td>\n",
+       "      <td>2770543</td>\n",
+       "      <td>2770543</td>\n",
+       "      <td>2770543</td>\n",
+       "      <td>2770543</td>\n",
+       "      <td>2770543</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2529536</td>\n",
+       "      <td>2529536</td>\n",
+       "      <td>2529536</td>\n",
+       "      <td>2529536</td>\n",
+       "      <td>2529536</td>\n",
+       "      <td>2529536</td>\n",
+       "      <td>2529536</td>\n",
+       "      <td>2529536</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     COUNTRY    PERWT      AGE    MARST  NATIVITY  EDATTAIN  EMPSTAT   INCTOT\n",
+       "SEX                                                                          \n",
+       "1    2770543  2770543  2770543  2770543   2770543   2770543  2770543  2770543\n",
+       "2    2529536  2529536  2529536  2529536   2529536   2529536  2529536  2529536"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.groupby('SEX').count()"
    ]
   },
   {
@@ -74,11 +300,13 @@
     "\n",
     "For each country of interest:\n",
     "\n",
-    "Current measure of pay gap inequality\n",
-    "Standardized samples of earnings/background census information\n",
-    "Regress log(wages) on gender and other variables (race, number of dependents, education, etc.) and control for role/industry, industry, neither\n",
+    "Find current measure of pay gap inequality.\n",
     "\n",
-    "Plot current measure of inequality vs unexplained proportion from B-O"
+    "Regress log(wages) on gender and other variables (race, number of dependents, education, etc.) and control for role/industry, industry, neither.\n",
+    "\n",
+    "Plot stacked bar chart of explained + unexplained.\n",
+    "\n",
+    "Plot current measure of inequality vs unexplained proportion from B-O."
    ]
   }
  ],
