--- a/Project.ipynb
+++ b/Project.ipynb
@@ -71,15 +71,45 @@
    "source": [
     "## 1. Implementation and Interpretation of Blinder-Oaxaca\n",
     "\n",
-    "`oaxaca` is ssc-able.\n",
+    "Blinder-Oaxaca decompositions are easily performed in Stata with the `oaxaca` package. There is also an R package, but there is yet to be one created for Python. This project is the underlying foundation for a Python implementation. We are building on top of `statsmodels`, so the framework will easily translate to regression models outside of just OLS."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Blinder-Oaxaca decomposition takes what the expected difference in outcomes between two groups, and identifies where the outcome gap comes from.\n",
     "\n",
-    "porting into python. building on top of `statsmodels`.\n",
+    "#### Decompositions\n",
     "\n",
-    "what the math behind it is.\n",
+    "So from \n",
     "\n",
-    "what we hope to do with that.\n",
+    "$$Gap = E[Earnings_m] - E[Earnings_f]$$\n",
     "\n",
-    "how it measures pay gap."
+    "The expectation in earnings can be given by the regression equations.\n",
+    "\n",
+    "$$Gap = X_m\\beta_m - X_f\\beta_f$$\n",
+    "\n",
+    "We can then split those up further.\n",
+    "\n",
+    "$$Gap = $$\n",
+    "$$(1) +$$\n",
+    "$$(2) +$$\n",
+    "$$(3)$$\n",
+    "\n",
+    "Each of those represents _.\n",
+    "\n",
+    "We are able to break each of those up into their subfactors (for each variable) by summing\n",
+    "\n",
+    "$$\\sum$$\n",
+    "\n",
+    "There is a second way to break this down.\n",
+    "\n",
+    "$$Gap = $$\n",
+    "\n",
+    "Unexplained / Explained\n",
+    "\n",
+    "#### Calculating Standard Errors"
    ]
   },
   {
@@ -216,83 +246,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>COUNTRY</th>\n",
-       "      <th>PERWT</th>\n",
-       "      <th>AGE</th>\n",
-       "      <th>MARST</th>\n",
-       "      <th>NATIVITY</th>\n",
-       "      <th>EDATTAIN</th>\n",
-       "      <th>EMPSTAT</th>\n",
-       "      <th>INCTOT</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SEX</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2770543</td>\n",
-       "      <td>2770543</td>\n",
-       "      <td>2770543</td>\n",
-       "      <td>2770543</td>\n",
-       "      <td>2770543</td>\n",
-       "      <td>2770543</td>\n",
-       "      <td>2770543</td>\n",
-       "      <td>2770543</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2529536</td>\n",
-       "      <td>2529536</td>\n",
-       "      <td>2529536</td>\n",
-       "      <td>2529536</td>\n",
-       "      <td>2529536</td>\n",
-       "      <td>2529536</td>\n",
-       "      <td>2529536</td>\n",
-       "      <td>2529536</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     COUNTRY    PERWT      AGE    MARST  NATIVITY  EDATTAIN  EMPSTAT   INCTOT\n",
-       "SEX                                                                          \n",
-       "1    2770543  2770543  2770543  2770543   2770543   2770543  2770543  2770543\n",
-       "2    2529536  2529536  2529536  2529536   2529536   2529536  2529536  2529536"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.groupby('SEX').count()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -308,6 +261,28 @@
     "\n",
     "Plot current measure of inequality vs unexplained proportion from B-O."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Citations:\n",
+    "\n",
+    "Jann, Ben, 2008. \"<a href=\"https://EconPapers.repec.org/RePEc:ets:wpaper:5\">A Stata implementation of the Blinder-Oaxaca decomposition</a>\", No 5, ETH Zurich Sociology Working Papers, ETH Zurich, Chair of Sociology.\n",
+    "\n",
+    "__our data source__\n",
+    "\n",
+    "Kennedy, Peter & Jutta Heinrichs, 2007. \"A computational trick for calculating the Blinder-Oaxaca decomposition and its standard error,\" Economics Bulletin, AccessEcon, vol. 3(66), pages 1-7."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
