--- a/Project.ipynb
+++ b/Project.ipynb
@@ -74,7 +74,7 @@
     "\n",
     "Blinder-Oaxaca decompositions are easily performed in Stata with the `oaxaca` package. There is also an R package, but there is yet to be one created for Python. This project is the underlying foundation for a Python implementation.\n",
     "\n",
-    "The goal of a Blinder-Oaxaca decomposition is to take the expected difference in outcomes between two groups, and identify what contributes to the outcome gap. "
+    "The goal of a Blinder-Oaxaca decomposition is to take the difference in expected outcomes between two groups, and identify what contributes to the outcome gap. "
    ]
   },
   {
@@ -85,22 +85,25 @@
     "\n",
     "*Note: Because the scope of this project is to create a greater understanding of the root of potential pay gaps, this walkthrough will be in the context of that. Our outcome of interest will be wages $w$. The two groups we will be comparing will be males $m$ and females $f$.*\n",
     "\n",
-    "In this section we'll break down the calculation of the decomposition. \n",
+    "In this section we'll break down the calculation of the decomposition. The wage gap in wages is the difference in the average wage for males and the average wage for females.\n",
     "\n",
     "$$Gap = E[Wage_m] - E[Wage_f]$$\n",
     "\n",
-    "$$E[Wage]=\\bar w=$$\n",
+    "We will substitute those expectations with a linear model for each group using the following form, where $X$ are the attributes that go into determining an individual's wage, and $\\epsilon$ is an error term:\n",
     "\n",
+    "$$Wage= X'\\beta + \\epsilon$$\n",
     "\n",
-    "It does so by first estimating regression equations for each of the two groups, then making comaprisons between the results of those equations and their inputs.\n",
-    "The expectation in earnings can be given by multiplying the average regressor values by the coefficients the regression equations.\n",
+    "where $\\bar\\epsilon=0$. After plugging the linear models for each gender into the $Gap$ equation, and using the assumption that the expectation of the errors is zero and making the assumption that $E[\\beta]=\\beta$, we are left with\n",
     "\n",
     "$$Gap = E[X_m]'\\beta_m - E[X_f]'\\beta_f$$\n",
     "\n",
-    "\n",
-    "\n",
-    "From there, we can further split up the regression terms to identify the source of the differences. There are two main ways that Oaxaca-type decompositions are broken down.\n",
-    "\n",
+    "We can further decompose the regression terms and $X$ values to identify the source of the difference. There are two main ways that Oaxaca-type decompositions are broken down."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "###### 1. Three-fold\n",
     "\n",
     "$$Gap = (E[X_m]-E[X_f])'\\beta_f \\quad \\quad (1)$$\n",
@@ -353,7 +356,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Citations:\n",
+    "**Citations:**\n",
     "\n",
     "Jann, Ben, 2008. \"<a href=\"https://EconPapers.repec.org/RePEc:ets:wpaper:5\">A Stata implementation of the Blinder-Oaxaca decomposition</a>\", No 5, ETH Zurich Sociology Working Papers, ETH Zurich, Chair of Sociology.\n",
     "\n",
@@ -361,15 +364,6 @@
     "\n",
     "Kennedy, Peter & Jutta Heinrichs, 2007. \"A computational trick for calculating the Blinder-Oaxaca decomposition and its standard error,\" Economics Bulletin, AccessEcon, vol. 3(66), pages 1-7."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
