continuing to describe blinder

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -106,19 +106,34 @@
    "source": [
     "###### 1. Three-fold\n",
     "\n",
+    "The first decomposition breaks down into three parts:\n",
+    "\n",
     "$$Gap = (E[X_m]-E[X_f])'\\beta_f \\quad \\quad (1)$$\n",
     "$$+E[X_f]'(\\beta_m-\\beta_f) \\quad \\quad \\quad (2)$$\n",
     "$$+(E[X_m]-E[X_f])'(\\beta_m-\\beta_f) \\quad \\quad (3)$$\n",
     "\n",
-    "Each of those represents a source of the difference.\n",
+    "Each of those represents a source of the difference, we'll call them the Endowment (1), Coefficient (2), and Interaction (3) terms.\n",
     "\n",
-    "(1) Endowments\n",
+    "(1) The first term is the portion of the gap that comes from different **endowments**, that is, the difference in attributes between males and females. So a difference in educational attainment would be captured here.\n",
     "\n",
-    "(2) Coefficients\n",
+    "(2) The second term is the portion of the gap difference that comes from different **coefficients**, or the difference in returns from their attributes. So a difference in the value that education returns to wages would be captured here.\n",
     "\n",
-    "(3) Interactions\n",
+    "(3) The third term is the portion of the gap that comes from the **interaction** between the different endowments and coefficients.\n",
     "\n",
-    "{whose perspective is this from}\n",
+    "In summary, a difference in the slope for education is in (2), and being somewhere else along that line is in (1).\n",
+    "\n",
+    "-------\n",
+    "*It is important to note that this decomposition uses the female regression as its baseline. In (1), we use the female regression coefficients to calculate the different endowment effect, and in (2), we use the female values of $E[X]$ to calculate the impact of different coefficients. This can easily be done using a male regression baseline by switching the order of the terms.*\n",
+    "\n",
+    "------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color=\"red\"> HERE </font>\n",
+    "\n",
     "\n",
     "We are able to break each of those up into their subfactors (for each variable) by summing\n",
     "\n",
@@ -139,6 +154,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "by using two separate regressions, we are not imposing one set of behavior on each group. Education may not work the same way in that country for men and women.\n",
+    "\n",
     "We are building on top of `statsmodels`, so the framework will easily translate to regression models outside of just OLS."
    ]
   },
