shit, like one sentence

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -157,7 +157,9 @@
     "\n",
     "This **unexplained** portion is normally attributed to discrimination, but as stated in the Jann paper, \"this interpretation hinges on the assumption that there are no relevant unobserved predictors.\"(4) If we have low explanatory power in our regression equations, there is potential for most of the noise to be captured in this term.\n",
     "\n",
-    "Even though discrimination is normally attributed to the coefficients, sometimes there is discrimination that presents itself in the endowment terms. For example, if a female is less likely to be admitted to school based on discrimination, then they will have lower education values that not naturally inherent to them."
+    "Even though discrimination is normally attributed to the coefficients, sometimes there is discrimination that presents itself in the endowment terms. For example, if a female is less likely to be admitted to school based on discrimination, then they will have lower education values that not naturally inherent to them.\n",
+    "\n",
+    "*Note: we will include an indicator for gender in our pooled model (that is what Stata does in their implementation).*"
    ]
   },
   {
