a few more sentences

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -460,7 +460,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Each country's INCTOT variable was reported in the currency of that country.  Looking at the histograms below, Male and Female incomes are generally centered around the same values.  However, with the exception of Panama, there appear to be more males earning higher wages. "
+    "Each country's INCTOT variable was reported in the currency of that country.  Looking at the histograms below, Male and Female incomes are generally centered around the same values.  However, with the exception of Panama, there appear to be more males earning higher wages.  We expect this should be reflected in the industry coefficients in our regression model. "
    ]
   },
   {
@@ -2966,6 +2966,89 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "WEF_2016 = pd.read_csv(\"WEF_2016.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Brazil</td>\n",
+       "      <td>0.687305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Canada</td>\n",
+       "      <td>0.730935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Panama</td>\n",
+       "      <td>0.720702</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>United States</td>\n",
+       "      <td>0.721992</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Country     Score\n",
+       "0         Brazil  0.687305\n",
+       "1         Canada  0.730935\n",
+       "2         Panama  0.720702\n",
+       "3  United States  0.721992"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "WEF_2016"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Discussion:  \n",
+    "\n",
+    "Person weights were not included in our analysis.  As a result, the samples aren't necessarily reflective of the populations from which they were drawn.  Future analysis could incorporate the weights.  \n",
+    "\n",
+    "Another problem our analysis suffers from is Omitted Variable Bias.  IPUMS is helpful because it tries to standardize variables across countries; however, this limmited the availability of variables we would have wished to include and control for in our regressions.  For example, we would have wanted to include a person's work experience and further broken down education levels."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2980,13 +3063,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Group Contributions:  \n",
+    "\n",
+    "Christopher worked on importing and cleaning the data from IPUMS.  He also created the visualizations and crosstabs.  Ronald created a package implementing Blinder-Oaxaca and wrote a description of the process.  He also ran the regressions using his package.  \n",
+    "\n",
+    "Both partners contributed to the other aspects of the project including written analysis and descriptions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Citations:**\n",
     "\n",
     "Jann, Ben, 2008. \"<a href=\"https://EconPapers.repec.org/RePEc:ets:wpaper:5\">A Stata implementation of the Blinder-Oaxaca decomposition</a>\", No 5, ETH Zurich Sociology Working Papers, ETH Zurich, Chair of Sociology.\n",
     "\n",
     "__our data source__\n",
     "\n",
-    "Kennedy, Peter & Jutta Heinrichs, 2007. \"A computational trick for calculating the Blinder-Oaxaca decomposition and its standard error,\" Economics Bulletin, AccessEcon, vol. 3(66), pages 1-7."
+    "Kennedy, Peter & Jutta Heinrichs, 2007. \"A computational trick for calculating the Blinder-Oaxaca decomposition and its standard error,\" Economics Bulletin, AccessEcon, vol. 3(66), pages 1-7.  \n",
+    "\n",
+    "Minnesota Population Center. Integrated Public Use Microdata Series, International: Version 7.0 [dataset]. Minneapolis, MN: IPUMS, 2018. http://doi.org/10.18128/D020.V7.0."
    ]
   }
  ],
