--- a/math.ipynb
+++ b/math.ipynb
@@ -178,13 +178,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 108,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df.to_csv('modified_canada.csv', index=False)"
+    "# exported so that we could compare to Stata\n",
+    "#df.to_csv('modified_canada.csv', index=False)"
    ]
   },
   {
